--- a/Primes/Primes.csproj
+++ b/Primes/Primes.csproj
@@ -45,7 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Prime.cs" />
+    <Compile Include="PrimesGenerator.cs" />
+    <Compile Include="PrimesCLI.cs" />
     <Compile Include="PrimeTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
